# low-level-design

./: pyproject.toml
src/elevator/: enums.py
src/elevator/active/: dispatcher.py  elevator.py  main.py
src/elevator/passive/: dispatcher.py  elevator.py  main.py  request.py
